--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!--NAVBAR-->
+<!--NAVBAR START-->
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 
@@ -123,3 +123,4 @@
             </div>
         </nav>
     </header>
+<!--NAVBAR END-->
