--- a/index.html
+++ b/index.html
@@ -87,6 +87,179 @@
             width: 75%;
         }
     }
+    body{
+        background-color:rgba(243,247,255,255);
+    }
+    .Co_founders_card1
+    {
+        width:439px;
+        height:552px;
+        background-color:rgba(243,247,255,255);
+        border-style:solid;
+        border-color:rgba(243,247,255,255);
+        border-radius:5%;
+        box-shadow: 2px 8px 8px 2px rgba(0,0,0,0.2);
+        margin-right:5%;
+        margin-left:2%;
+        margin-top:10%;
+        display:inline-block;
+    }
+    .Co_founders_cardImage
+    {
+        height:65%;
+        width:100%;
+    }
+    .Co_founders_cardTitle
+    {
+        color:#1d2f6f;
+        font-weight:bold;
+        font-size:2em;
+        height:7%;
+        text-align:center;
+    }
+    .Co_founders_cardBody
+    {
+        color:#1d2f6f;
+        font-size:1.5em;
+        height:28%;
+        text-align:center;
+        padding-top:2.5%;
+    }
+    .Co_founders_img
+    {
+        width:auto;
+        height: 100%;
+        margin-left:auto;
+        margin-right:auto;
+    }
+    .Co_founders_hr1
+            {
+                height:0.5%;
+                width:100%;
+                border-style:solid;
+                border-color:#fbcf57;
+                background-color:#fbcf57;
+                margin-top:6%;
+            }
+            .Co_founders_heading{
+                width:auto;
+                color:#1d2f6f;
+                font-weight:bolder;
+                font-size:250%;
+                background-color:rgba(243,247,255,255);
+                position:absolute;
+                left:10%;
+                margin-top:3.5%;
+            }
+            .Co_founders_row2{
+                padding-left:6%;
+            }
+            .Co_founders_head1
+            {
+                width:auto;
+                color:#1d2f6f;
+                font-weight:bolder;
+                font-size:250%;
+                background-color:rgba(243,247,255,255);
+                visibility:hidden;
+                position:absolute;
+                left:10%;
+                margin-top:3.5%;
+            }
+            @media screen and (min-width:760px) and (max-width:836px)
+            {
+                .Co_founders_card1{
+            width:200px;
+            height:280px;
+            margin-left:0%;
+
+        }
+        .Co_founders_img
+        {
+            width:auto;
+            height:100%;
+        }
+        .Co_founders_cardTitle
+        {
+            font-size:1.5em;
+        }
+        .Co_founders_cardBody{
+            font-size:1em;
+            padding-top:7%;
+        }
+        .Co_founders_heading
+        {
+            margin-top:4%;
+        }
+            }
+    @media screen and (min-width:837px) and (max-width:1300px)
+    {
+        .Co_founders_card1{
+            width:220px;
+            height:300px;
+            margin-left:1%;
+
+        }
+        .Co_founders_img
+        {
+            width:auto;
+            height:100%;
+        }
+        .Co_founders_cardTitle
+        {
+            font-size:1.5em;
+        }
+        .Co_founders_cardBody{
+            font-size:1em;
+            padding-top:7%;
+        }
+        .Co_founders_heading
+        {
+            font-size:200%;
+            margin-top:4%;
+        }
+
+    }
+    @media screen and (min-width:1301px)
+    {
+
+        .Co_founders_card1{
+            width:339px;
+            height:452px;
+        }
+        .Co_founders_heading
+        {
+            margin-top:4.5%;
+        }
+    }
+    @media screen and (min-width:250px) and (max-width:759px)
+    {
+        .Co_founders_card1{
+        width:300px;
+        height:420px;
+        }
+        .Co_founders_img
+        {
+            width:200px;
+            height:100%;
+        }
+        .Co_founders_row2
+        {
+            overflow-x:auto;
+            overflow-y:hidden;
+            white-space:nowrap;
+        }
+        .Co_founders_heading
+        {
+            visibility:hidden;
+        }
+        .Co_founders_head1{
+            margin-top:3%;
+            margin-left:15%;
+            visibility:visible;
+        }
+        
+    }
 </style>
 
 
@@ -124,3 +297,45 @@
         </nav>
     </header>
 <!--NAVBAR END-->
+    <!--Co Founders-->
+          <div style="color:rgba(243,247,255,255);height:80px;">hello</div>         
+          <div class="Co_founders_heading">#Founders</div><span class="Co_founders_head1">Founders</span>
+          <hr class="Co_founders_hr1">
+          <div class="Co_founders_row2">
+              <center>
+    <div class="Co_founders_card1">
+        <div class="Co_founders_cardImage">
+           <img class="Co_founders_img" src="nishchay.png" alt="nischay"/>
+        </div>
+        <div class="Co_founders_cardTitle">
+          Nischay J Katariya
+        </div>
+        <div class="Co_founders_cardBody">
+           Chief Business Officer
+        </div>
+        </div>
+    <div class="Co_founders_card1">
+        <div class="Co_founders_cardImage">
+           <img class="Co_founders_img" src="megha.png" alt="megha"/>
+        </div>
+        <div class="Co_founders_cardTitle">
+          Meghhaa Woraah
+        </div>
+        <div class="Co_founders_cardBody">
+            Group Chief Executive Officer
+        </div>
+    </div>
+    <div class="Co_founders_card1">
+        <div class="Co_founders_cardImage">
+           <img class="Co_founders_img" src="nithin.png" alt="nithin"/>
+        </div>
+        <div class="Co_founders_cardTitle">
+          Nithin Awathare
+        </div>
+        <div class="Co_founders_cardBody">
+            Chief Technology Officer
+        </div>
+    </div>
+    </center>
+    </div>
+    <!--Co Founders End-->
