--- a/index.html
+++ b/index.html
@@ -299,13 +299,13 @@
 <!--NAVBAR END-->
  <!-- Co-founders-->
     <div style="color:rgba(243,247,255,255);height:80px;">hello</div>         
-          <div class="Co_founders_heading">#Founders</div><span class="Co_founders_head1">Founders</span>
+          <div class="Co_founders_heading">#Co-Founders</div><span class="Co_founders_head1">Co-Founders</span>
           <hr class="Co_founders_hr1">
           <div class="Co_founders_row2">
               <center>
     <div class="Co_founders_card1">
         <div class="Co_founders_cardImage">
-           <img class="Co_founders_img" src="nishchay.png" alt="nischay"/>
+           <img class="Co_founders_img" src="Co_Founders_Images/nishchay.png" alt="nischay"/>
         </div>
         <div class="Co_founders_cardTitle">
           Nischay J Katariya
@@ -316,7 +316,7 @@
         </div>
     <div class="Co_founders_card1">
         <div class="Co_founders_cardImage">
-           <img class="Co_founders_img" src="megha.png" alt="megha"/>
+           <img class="Co_founders_img" src="Co_Founders_Images/megha.png" alt="megha"/>
         </div>
         <div class="Co_founders_cardTitle">
           Meghhaa Woraah
@@ -327,7 +327,7 @@
     </div>
     <div class="Co_founders_card1">
         <div class="Co_founders_cardImage">
-           <img class="Co_founders_img" src="nithin.png" alt="nithin"/>
+           <img class="Co_founders_img" src="Co_Founders_Images/nithin.png" alt="nithin"/>
         </div>
         <div class="Co_founders_cardTitle">
           Nithin Awathare
