--- a/index.html
+++ b/index.html
@@ -87,8 +87,9 @@
             width: 75%;
         }
     }
-        body{
+       body{
         background-color:rgba(243,247,255,255);
+        font-family: 'Poppins', sans-serif;
     }
     .Co_founders_card1
     {
@@ -103,6 +104,7 @@
         margin-left:2%;
         margin-top:10%;
         display:inline-block;
+        
     }
     .Co_founders_cardImage
     {
@@ -113,14 +115,14 @@
     {
         color:#1d2f6f;
         font-weight:bold;
-        font-size:2em;
+        font-size:medium;
         height:7%;
         text-align:center;
     }
     .Co_founders_cardBody
     {
         color:#1d2f6f;
-        font-size:1.5em;
+        font-size:small;
         height:28%;
         text-align:center;
         padding-top:2.5%;
@@ -260,6 +262,7 @@
         }
         
     }
+
 </style>
 
 <!--NAVBAR START-->
@@ -298,8 +301,10 @@
     </header>
 <!--NAVBAR END-->
  <!-- Co-founders-->
+ <!-- Co-founders-->
+ <div style="margin-top:30px">
     <div style="color:rgba(243,247,255,255);height:80px;">hello</div>         
-          <div class="Co_founders_heading">#Co-Founders</div><span class="Co_founders_head1">Co-Founders</span>
+          <div class="Co_founders_heading" style="font-weight:bolder;">#Co-Founders</div><span class="Co_founders_head1" style="font-size:large;font-weight:bolder;">Co-Founders</span>
           <hr class="Co_founders_hr1">
           <div class="Co_founders_row2">
               <center>
@@ -307,10 +312,10 @@
         <div class="Co_founders_cardImage">
            <img class="Co_founders_img" src="Co_Founders_Images/nishchay.png" alt="nischay"/>
         </div>
-        <div class="Co_founders_cardTitle">
+        <div class="Co_founders_cardTitle" style="font-size:large;">
           Nischay J Katariya
         </div>
-        <div class="Co_founders_cardBody">
+        <div class="Co_founders_cardBody" style="font-size:medium;">
            Chief Business Officer
         </div>
         </div>
@@ -318,10 +323,10 @@
         <div class="Co_founders_cardImage">
            <img class="Co_founders_img" src="Co_Founders_Images/megha.png" alt="megha"/>
         </div>
-        <div class="Co_founders_cardTitle">
+        <div class="Co_founders_cardTitle" style="font-size:large;">
           Meghhaa Woraah
         </div>
-        <div class="Co_founders_cardBody">
+        <div class="Co_founders_cardBody" style="font-size:medium;">
             Group Chief Executive Officer
         </div>
     </div>
@@ -329,13 +334,14 @@
         <div class="Co_founders_cardImage">
            <img class="Co_founders_img" src="Co_Founders_Images/nithin.png" alt="nithin"/>
         </div>
-        <div class="Co_founders_cardTitle">
+        <div class="Co_founders_cardTitle" style="font-size:large;">
           Nithin Awathare
         </div>
-        <div class="Co_founders_cardBody">
+        <div class="Co_founders_cardBody" style="font-size:medium;">
             Chief Technology Officer
         </div>
     </div>
     </center>
+    </div>
     </div>
    <!--Co Founders End-->
