--- a/index.html
+++ b/index.html
@@ -300,6 +300,10 @@
         </nav>
     </header>
 <!--NAVBAR END-->
+    <!--Building Careers & Our Vision , Our Mision start-->
+    
+    
+    <!--Building Careers & Our Vision , Our Mision End-->
  <!-- Co-founders-->
  <!-- Co-founders-->
  <div style="margin-top:30px">
@@ -345,3 +349,5 @@
     </div>
     </div>
    <!--Co Founders End-->
+    </body>
+</html>
