--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
                   <p class="p3" style="color:orange;width: 350px; font-weight: bold; margin-top:200px;padding-left:3.125rem;font-style: poppins;"> Coming Soon on Google Play and Apple Store</p>
                   <br><br><br>
             </div>
-            <div class="col-sm col-xs col-md col-lg-5 order-xs-1" style="margin-top: 50px;margin-left: -50px;">  <img src="mobile.png" width="680px" height="350px"  alt=""> </div>
+            <div class="col-sm col-xs col-md col-lg-5 order-xs-1" style="margin-top: 50px;margin-left: -50px;">  <img src="talentserveapp_images/mobile.png" width="680px" height="350px"  alt=""> </div>
         </div>
       </div>
       </div>
