--- a/index.html
+++ b/index.html
@@ -30,11 +30,34 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Otomanopee+One&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <script src="https://kit.fontawesome.com/94e307683f.js" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
 </head>
+    <!--Buildercarrers style start-->
+    <style type="text/css">
+      .users-review {
+          text-align: center;
+          box-shadow: 0 0 10px 0 rgb(0 0 100 / 20%);
+          padding-bottom: 20px;
+          padding: 10px;
+          width: 400px;
+          height: 250px;
+          margin: auto;
+          background-color: #F1FBFC;
+          border-radius: 10px;
+      }
+    </style>
+    <!--Buildercarrers style end-->
 <style>
     html,
     body {
@@ -716,7 +739,42 @@ a:link {
     </header>
 <!--NAVBAR END-->
     <!--Building Careers & Our Vision , Our Mision start-->
-    
+    <body style="background-color: #F1FBFC;">
+  <section style="margin:auto auto 10% auto;">
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <h1 style="color:#000080; margin: 14% 3% auto auto; font-style: bold; font-size:3.3em;">Building Careers</h1>
+          <h2 style="color:#00008B; margin: 5% 3% auto auto;">Across the globe</h2>
+
+        </div>
+        <div class="col">
+          <img src="ll.png" alt="hii" style="margin: 14% 4% auto 8%;" height="400" width="650">
+        </div>
+      </div>
+    </div>
+    <button class="btn btn-primary" style="border-radius:30px; margin: auto 2% auto 13%; width: 16%; font-size: 2em; background-color: #151B54;">Let's start <i style="font-size:0.8em;" class="fa fa-arrow-right icon"></i></button><span style="font-size: 1.8em; color: #151B54;">Your Career Journey</span>
+  </section>
+
+  <section style="margin:auto auto 10% auto;">
+    <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-6">
+        <div class="users-review">
+          <img src="Arch.jpeg" alt="archery" height="60" width="60"><span style="font-size:2em; color: #000080; font-style: bold; margin-left: 10px;">Our Mission</span>
+          <p style="font-size:1.4em; color: #151B54;">With one convenient visit here we give you a one stop solution for all your Career needs.</p>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="users-review">
+            <img src="Eee.jpeg" alt="archery" height="75" width="80"><span style="font-size:2em; color: #000080; font-style: bold; margin-left: 10px;">Our Vision</span>
+            <p style="font-size:1.4em; color: #151B54;">To help students, working professionals and Jobseekers find a right career path which can shape their talent across.</p>
+            </div>
+          </div>
+        </div>
+    </div>
+</section>
+
     
     <!--Building Careers & Our Vision , Our Mision End-->
     <!--why us start-->
