--- a/index.html
+++ b/index.html
@@ -1106,7 +1106,7 @@ upto Rs 1 Lakh per month.
             </div> </div>
 </div></div></div>
 </div>
-</div><br><br><br>
+</div>
             
             <!--Testimonials end-->
             
