--- a/index.html
+++ b/index.html
@@ -906,7 +906,7 @@ This world is moving fast pace and we all
         </pre>
              
               <a class="services_button1" href="under.html" style="font-family:poppins;margin-top: 14px;">Know more</a>
-              <a class="bn btn-first" href="#" style="font-family:poppins;color: #002e63; margin-top: 2px;">See topics</a>
+              <a class="services_button2" href="under.html" style="font-family:poppins;color: #002e63; margin-top: 2px;">See topics</a>
             </div>
           </div> 
         </div>
