--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 
@@ -632,6 +631,18 @@ a:link {
                 .footer_li2Hide { 
                   display: none;}
               }
+    .horizontal_line1
+    {
+        font-size:150%;
+        color:#1d2f6f;
+        font-weight:bolder;
+    }
+    .horizontal_line2
+    {
+        font-size:250%;
+        color:#1d2f6f;
+        font-weight:bolder;
+    }
 </style>
     <script>
 
@@ -1120,7 +1131,7 @@ upto Rs 1 Lakh per month.
         </div>
     </div>
 </div>
-          <div class="Co_founders_row2">
+          <div class="Co_founders_row2" style="padding-bottom:5%;">
               <center>
     <div class="Co_founders_card1">
         <div class="Co_founders_cardImage">
@@ -1266,3 +1277,4 @@ upto Rs 1 Lakh per month.
              <!--footer-->
     </body>
 </html>
+
