--- a/index.html
+++ b/index.html
@@ -799,7 +799,7 @@ a:link {
      <div class="row cg-row">
 
        <div class="card cg-card">
-         <img src="College Logos/Group 2423.png"  alt="">
+         <img src="College Logos/Group 2423.jpeg"  alt="">
        </div>
        <div class="card cg-card">
          <img src="College Logos/Group 2424.png" alt="">
