--- a/index.html
+++ b/index.html
@@ -738,17 +738,20 @@ a:link {
                 padding-left:4rem !important;
               }
           }
-    .horizontal_line1
+  .horizontal_line
+    {
+        font-size:250%;
+        color:#1d2f6f;
+        font-weight:bolder;
+    }
+    @media screen and (max-width:992px)
+    {
+      .horizontal_line
     {
         font-size:150%;
         color:#1d2f6f;
         font-weight:bolder;
     }
-    .horizontal_line2
-    {
-        font-size:250%;
-        color:#1d2f6f;
-        font-weight:bolder;
     }
 </style>
     <script>
@@ -775,17 +778,12 @@ a:link {
                   if ($(".hr_fix").hasClass("col-1")) {
                       $(".hr_fix").addClass("flex-fill");
                       $(".hr_fix").removeClass("col-1");
-                      $(".horizontal_line").addClass("horizontal_line1");
-                      $(".horizontal_line").removeClass("horizontal_line2");
-                      
                   }
               } else {
   
                   if ($(".hr_fix").hasClass("flex-fill")) {
                       $(".hr_fix").addClass("col-1");
                       $(".hr_fix").removeClass("flex-fill");
-                      $(".horizontal_line").addClass("horizontal_line2");
-                      $(".horizontal_line").removeClass("horizontal_line1");
                       
                   }
   
