--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ body{
             height:442px;
         }
     }
-    @media screen and (min-width:250px) and (max-width:992px)
+    @media screen and (max-width:992px)
     {
         .Co_founders_card1{
         width:300px;
@@ -1244,17 +1244,6 @@ upto Rs 1 Lakh per month.
               <center>
     <div class="Co_founders_card1">
         <div class="Co_founders_cardImage">
-           <img class="Co_founders_img" src="Co_Founders_Images/nishchay.png" alt="nischay"/>
-        </div>
-        <div class="Co_founders_cardTitle" style="font-size:large;">
-          Nischay J Katariya
-        </div>
-        <div class="Co_founders_cardBody" style="font-size:medium;">
-           Chief Business Officer
-        </div>
-        </div>
-    <div class="Co_founders_card1">
-        <div class="Co_founders_cardImage">
            <img class="Co_founders_img" src="Co_Founders_Images/megha.png" alt="megha"/>
         </div>
         <div class="Co_founders_cardTitle" style="font-size:large;">
@@ -1264,6 +1253,17 @@ upto Rs 1 Lakh per month.
             Group Chief Executive Officer
         </div>
     </div>
+     <div class="Co_founders_card1">
+        <div class="Co_founders_cardImage">
+           <img class="Co_founders_img" src="Co_Founders_Images/nishchay.png" alt="nischay"/>
+        </div>
+        <div class="Co_founders_cardTitle" style="font-size:large;">
+          Nischay J Katariya
+        </div>
+        <div class="Co_founders_cardBody" style="font-size:medium;">
+           Chief Business Officer
+        </div>
+        </div>
     <div class="Co_founders_card1">
         <div class="Co_founders_cardImage">
            <img class="Co_founders_img" src="Co_Founders_Images/nithin.png" alt="nithin"/>
