--- a/index.html
+++ b/index.html
@@ -1126,7 +1126,7 @@ a:link {
               <div class="card services_card1 shadow p-2 mb-3" style="height: 480px;margin-top: 120px;margin-left:60px;margin-right: 2px;">
               <center><img src="sarathi.PNG" class= "img-fluid" alt="Responsive image" style="width: 290px;height: 145.98px;border-radius: 20%; margin-top: 20px;" ></center>
               <div class="card-service_body">
-                 <h4 class="card-title" style="text-align:center;color: #1c2f6f; font-size:24px; font-family: poppins" ><strong>SAARATHI</strong></h4>
+                 <h4 class="card-title" style="text-align:center;color: #1c2f6f; font-size:24px; font-family: poppins" ><strong>SAARATHII</strong></h4>
              <pre class="card-text" style="font-size:15.4px;margin-top:20px;margin-bottom:8%;font-family:poppins;color: #002e63;">
  A Not for profit social initiative to create 
 1,00,000 job opportunities across India.
