--- a/index.html
+++ b/index.html
@@ -1408,7 +1408,7 @@ upto Rs 1 Lakh per month.
             <!-- mobile end-->
          <!--Footer Start-->
     <div>
-           <footer class="page-footer"style="background-color: #060478;">
+           <footer class="page-footer"style="background-color:#1D2F6F;">
       <div>
         <div class="container">
        <div class="container mt-4">
@@ -1419,7 +1419,7 @@ upto Rs 1 Lakh per month.
             <img  src="footer_pic.png" alt="">
           </div>
            <div class="row">
-            <div class=" col-xs-6 mt-3 footer_align order-sm-2 order-xs-4">
+            <div class=" col-xs-6 mt-4 ml-3 footer_align order-sm-2 order-xs-4">
                 <a href="https://www.facebook.com/talentserve/">
                       <img src="FB_pic.png" class="mr-1 footer_imgs" alt="" style=" height:3rem;"></a>
                 <a href="https://twitter.com/talentserve">
@@ -1431,7 +1431,7 @@ upto Rs 1 Lakh per month.
                 <a href="https://www.linkedin.com/company/talentserve-india-pvt-ltd/">
                      <img src="linked_in_pic.png" class="mr-1 footer_imgs" alt="" style="height:3rem;"></a>
             </div>
-            <div class=" col-xs-6 mt-3 footer_align1 order-sm-3  order-xs-5">
+            <div class=" col-xs-6 mt-4 ml-3 footer_align1 order-sm-3  order-xs-5">
               <p class="font-italic copyright_text"style="color: white; font-size:16px;">Copyright © 2020 TalentServe All rights reserved.<br>
                     Read our Terms & Conditions, Privacy Policy.</p>
             </div>
