--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
         }
         .navbar-collapse.collapse.show,
         .navbar-collapse.collapsing {
-            background: white !important;
-            background: #FFFFFF;
+            background-color:#F3F7FF; !important
+          
             box-shadow: 0px 4px 34px rgba(101, 101, 101, 0.15);
             border-radius: 10px;
             margin-top: 15px;
@@ -119,7 +119,7 @@
           margin: auto 2% auto 15%;
           width: 15%;
           font-size: 2em;
-          background-color: #151B54;
+          background-color:#F3F7FF;
           float: left;
         }
         .BCimg{
@@ -138,7 +138,7 @@
           margin: auto 2% auto 13%;
           width: 20%;
           font-size: 1.4em;
-          background-color: #151B54;
+          background-color:#F3F7FF;
         }
         .Building-career-h1{
             color:#000080;
@@ -169,7 +169,7 @@
           margin: auto 2% auto 13%;
           width: 20%;
           font-size: 1.4em;
-          background-color: #151B54;
+          background-color:#F3F7FF;
         }
         .Building-career-h1{
             color:#000080;
@@ -196,7 +196,8 @@
     
         <!--co-founders-->
 body{
-        background-color:rgba(243,247,255,255);
+        <!--background-color:rgba(243,247,255,255);-->
+	background-color:#F3F7FF;
         font-family: 'Poppins', sans-serif;
     }
     .Co_founders_card1
@@ -431,7 +432,8 @@ body{
     color: darkblue;
 }
     .services_body {
-  background: #1D2F6F;
+  <!--background: #1D2F6F;-->
+  background-color:#F3F7FF;
   min-height: 50vh;
    min-width: 100%;
 }
@@ -550,7 +552,8 @@ body
   overflow-x:hidden;
 }
 .body {
-  background: #1D2F6F;
+  <!--background: #1D2F6F;-->
+	background-color:#F3F7FF;
   min-height: 50vh;
   min-width: 100%;
 }
@@ -890,8 +893,8 @@ a:link {
       });
   </script>
 <!--NAVBAR START-->
-<body style="background-color:rgba(243,247,255,255);">
-    <header style="background-color:rgba(243,247,255,255);">
+<body style="background-color:#F3F7FF;;">
+    <header style="background-color:#F3F7FF;">
         <nav class="navbar navbar-expand-lg navbar-light" style="height:85px;position: relative;z-index: 5; box-shadow: 3px 8px 8px 2px rgba(0,0,0,0.2);">
             <img src="logo.svg" height="50px" class="img-fluid ml-5" />
             <button class="navbar-toggler" type="button" style="outline: none;border:none;" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -925,7 +928,7 @@ a:link {
     </header>
 <!--NAVBAR END-->
     <!--Building Careers & Our Vision , Our Mision start-->
-<body style="background-color: #F1FBFC;">
+<body style="background-color:#F3F7FF;">
   <section style="margin:auto auto 10% auto;">
     <div class="container Building-career">
       <div class="row">
@@ -970,7 +973,7 @@ a:link {
 <div class="col-lg-4 mb-12">
   <div class="main-whyus">
     <div class="whyus">
-        <div class="whyus-body"style="background-color:rgba(240,248,255,1); border-radius: 18px;width: 453.59;height:350px;">
+        <div class="whyus-body"style="background-color:#F3F7FF; border-radius: 18px;width: 453.59;height:350px;">
           <div>
             <div class="cd-pr"> <center><img src="whyus_images/1.png" width="95" height="95"  alt="..." class="center"></center>
               <span style="color: #1c2f6f; font-size: xx-large;font-weight: bold;">
@@ -987,7 +990,7 @@ a:link {
       <div class="col-lg-4 mb-12">
   <div class="main-whyus">
     <div class="whyus">
-        <div class="whyus-body" style="background-color:rgba(240,248,255,1); border-radius: 18px;width: 453.59;height:350px;">
+        <div class="whyus-body" style="background-color:#F3F7FF; border-radius: 18px;width: 453.59;height:350px;">
           <div>
             <div class="cd-pr"> <img src="whyus_images/2.png" width="95" height="95"  alt="..." class="center">
               <span style="color: #1c2f6f; font-size: xx-large;font-weight: bold;">
@@ -1004,7 +1007,7 @@ a:link {
    <div class="col-lg-4 mb-12">
   <div class="main-whyus">
     <div class="whyus" >
-        <div class="whyus-body"style="background-color:rgba(240,248,255,1);border-radius: 18px;width: 453.59;height:350px;">
+        <div class="whyus-body"style="background-color:#F3F7FF;border-radius: 18px;width: 453.59;height:350px;">
           <div>
             <div class="cd-pr"> <center><img src="whyus_images/3.png" width="95" height="95"  alt="..." class="center"></center>
               <span style="color: #1c2f6f; font-size: xx-large;font-weight: bold;">
