--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
           margin: auto 2% auto 13%;
           width: 20%;
           font-size: 1.4em;
-          background-color:#F3F7FF;
+		background-color: #151B54;
         }
         .Building-career-h1{
             color:#000080;
