--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           margin: auto 2% auto 15%;
           width: 15%;
           font-size: 2em;
-          background-color:#F3F7FF;
+          background-color: #151B54;
           float: left;
         }
         .BCimg{
