--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             margin: auto 2% auto 15%;
             width: 15%;
             font-size: 2em;
-            background-color: #151B54;
+            background-color: #1D2F6F;
             float: left;
         }
         .BCimg {
@@ -971,8 +971,8 @@
             <div class="container Building-career">
                 <div class="row">
                     <div class="col-lg-6 col-md-12">
-                        <h1 class="Building-career-h1">Building Careers</h1>
-                        <h2 class="Building-career-h2">Across the globe</h2>
+                        <h1 class="Building-career-h1" style="color: #1D2F6F; font-family: poppins;font-weight: bolder;text-align: left;">Building Careers</h1>
+                        <h2 class="Building-career-h2" style="color: #1D2F6F; font-family: poppins;font-weight: bolder;">Across the globe</h2>
                     </div>
                     <div class="col-lg-6 col-md-12">
                         <img class="BCimg" src="buliding.jpeg" alt="Building Careers">
@@ -984,7 +984,7 @@
                 </div>
             </div>
             <div class="btn-letsstart">
-                <button class="btn btn-primary" id="letstart"><span style="font-family: poppins;">Let's start </span> <i style="font-size:0.8em;" class="fa fa-arrow-right icon"></i></button>
+                <button class="btn btn-primary" id="letstart" style="border: none;border-radius: none;"><span style="font-family: poppins;font-size: 30px;">Let's start </span> <i style="font-size:0.8em;" class="fa fa-arrow-right icon"></i></button>
                 <p class="mt-2" style="display:inline-block; font-size:1.8em;font-style: poppins; color:#151B54; "> Your Career Journey</p>
             </div>
         </section>
