--- a/index.html
+++ b/index.html
@@ -1165,46 +1165,45 @@
             </div>
         </div>
 
-        <div class="services_container justify-content-center">
-            <center>
-                <div class="services">
-                    <div class="card services_card1 shadow p-2 mb-3" style="height: 480px;margin-top: 120px;margin-left:60px;margin-right: 2px;">
-                        <center><img src="sarathi.PNG" class="img-fluid" alt="Responsive image" style="width: 290px;height: 145.98px;border-radius: 20%; margin-top: 20px;"></center>
-                        <div class="card-service_body">
-                            <h4 class="card-title" style="text-align:center;color: #1c2f6f; font-size:24px; font-family: poppins"><strong>SAARATHII</strong></h4>
-                            <pre class="card-text" style="font-size:15.4px;margin-top:20px;margin-bottom:8%;font-family:poppins;color: #002e63;">
+            <div class="services_container justify-content-center"><center>
+   <div class="services">
+              <div class="card services_card1 shadow p-2 mb-3" style="height: 480px;margin-top: 120px;margin-left:60px;margin-right: 2px;">
+              <center><img src="sarathi.PNG" class= "img-fluid" alt="Responsive image" style="width: 290px;height: 125px;border-radius: 20%; margin-top: 20px;" ></center>
+              <div class="card-service_body">
+                 <h4 class="card-title" style="text-align:center;color: #1c2f6f; font-size:24px; font-family: poppins;" ><strong>SAARATHII</strong></h4>
+             <pre class="card-text" style="font-size:15.4px;margin-top:20px;margin-bottom:8%;font-family:poppins;color: #002e63;">
  A Not for profit social initiative to create 
 1,00,000 job opportunities across India.
             </pre>
-                            <a class="services_button1 nounderline" href="#" style="font-family:poppins; margin-top: 
-              75px">Know more</a>
-                        </div>
-                    </div>
-                </div>
+              <a  class="services_button1 nounderline" href="#" style="font-family:poppins; margin-top: 
+              100px">Know more</a>
+         </div>
+           </div>
+      </div>
 
-                <div class="services">
-                    <div class="card services_card1 shadow p-2 mb-3" style="height: 480px;margin-left: 60px;margin-top: 120px">
-                        <center><img src="chanakya.PNG" class="img-fluid" alt="Responsive image" style="border-radius: 20%; margin-top:20px;margin-right: 2px;"></center>
-                        <div class="card-service_body">
-                            <h4 class="card-title" style="text-align:center;color: #1c2f6f; font-size:24px; font-family: poppins;margin-top: 23px;"><strong>PHYGITAL LEARNING</strong></h4>
-                            <pre class="card-text" style="font-size:15.4px;margin-top:20px;margin-bottom:8%;font-family:poppins;color: #002e63;">
+      <div class="services">
+        <div class="card services_card1 shadow p-2 mb-3" style="height: 480px;margin-left: 60px;margin-top: 120px">
+              <center><img src="chanakya.PNG" class="img-fluid" alt="Responsive image" style="border-radius: 20%; margin-top:20px;margin-right: 2px;"></center>
+              <div class="card-service_body">
+                 <h4 class="card-title" style="text-align:center;color: #1c2f6f; font-size:24px; font-family: poppins;margin-top: 23px;" ><strong>PHYGITAL LEARNING</strong></h4>
+                <pre class="card-text" style="font-size:15.4px;margin-top:20px;margin-bottom:8%;font-family:poppins;color: #002e63;">
  Plan your digital through our Phygital
  way. We have created wide libraries
  and courses in latest technologies,
  competitive exams and management
  courses.
              </pre>
-                            <a class="services_button1 nounderline" href="under.html" style="font-family:poppins;margin-top: 
+              <a class="services_button1 nounderline" href="under.html" style="font-family:poppins;margin-top: 
               28px">Know more</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="services">
-                    <div class="card services_card1  shadow p-2 mb-3" style="height: 480px;margin-top: 120px;margin-left: 60px;">
-                        <center><img src="webinars.PNG" class="img-fluid" alt="Responsive image" style="border-radius: 20%; margin-top: 20px;width: 190px;height: 129px"></center>
-                        <div class="card-services_body">
-                            <h4 class="card-title" style="text-align:center;color: #1c2f6f; font-size:24px; font-family: poppins;margin-top: -8px;"><strong>WEBINARS</strong></h4>
-                            <pre class="card-text" style="font-size:15.4px;margin-top:20px;margin-bottom:8%;font-family:poppins;color: #002e63;">
+           </div>
+          </div> 
+      </div>
+ <div class="services">
+         <div class="card services_card1  shadow p-2 mb-3" style="height: 480px;margin-top: 120px;margin-left: 60px;">
+              <center><img src="webinars.PNG" class="img-fluid" alt="Responsive image"style="border-radius: 20%; margin-top: 20px;width: 190px;height: 129px"></center>
+              <div class="card-services_body">
+                <h4 class="card-title" style="text-align:center;color: #1c2f6f; font-size:24px; font-family: poppins;margin-top: -8px;" ><strong>WEBINARS</strong></h4>   
+                 <pre class="card-text" style="font-size:15.4px;margin-top:20px;margin-bottom:8%;font-family:poppins;color: #002e63;">
 This world is moving fast pace and we all
  have intrersts in learning something
  new. DISHAA helps you decide about
@@ -1212,51 +1211,50 @@ This world is moving fast pace and we all
  webinars related to latest technologies
  and other management courses.
         </pre>
-                            <a class="services_button1 nounderline" href="under.html" style="font-family:poppins;margin-top: 10px;">Know more</a>
-                            <a class="services_button2 nounderline" href="under.html" style="font-family:poppins;color: #002e63; margin-top: 2px;">See topics</a>
-                        </div>
-                    </div>
-                </div>
+              <a class="services_button1 nounderline" href="under.html" style="font-family:poppins;margin-top: 10px;">Know more</a>
+              <a class="services_button2 nounderline" href="under.html" style="font-family:poppins;color: #002e63; margin-top: 2px;">See topics</a>
+            </div>
+          </div> 
+        </div>
 
-                <div class="services">
-                    <div class="card services_card1 shadow p-2 mb-3" style="height: 480px;margin-top: 120px;margin-left:20px;">
-                        <center><img src="workshops.PNG" class="img-fluid" alt="Responsive image" style="border-radius: 20%;width: 260px;height: 105px;margin-top: 20px"></center>
-                        <div class="card-service_body">
-                            <h4 class="card-title" style="text-align:center;color: #1c2f6f; font-size:24px; font-family: poppins;margin-top: 20px;"><strong>WORKSHOPS</strong></h4>
-                            <pre class="card-text" style="font-size:14px;margin-top:20px;margin-bottom:8%;font-family:poppins;color: #002e63;">
+<div class="services">
+        <div class="card services_card1 shadow p-2 mb-3" style="height: 480px;margin-top: 120px;margin-left:20px;">
+              <center><img src="workshops.PNG" class="img-fluid" alt="Responsive image"style="border-radius: 20%;width: 260px;height: 105px;margin-top: 20px"></center>
+              <div class="card-service_body">
+                 <h4 class="card-title" style="text-align:center;color: #1c2f6f; font-size:24px; font-family: poppins;margin-top: 20px;" ><strong>WORKSHOPS</strong></h4>
+  <pre class="card-text" style="font-size:15.4px;margin-top:20px;margin-bottom:8%;font-family:poppins;color: #002e63;">
 To be ready for the corporate industry
 a pragmatic approach has to be indicated
 TalentServe s DRISHYAM helps you embed
 these industrial practices by conducting
 hands on workshops.
         </pre>
-                            <a class="services_button1 nounderline" href="under.html" style="font-family:poppins;margin-top: 
-              40px">Know more</a>
-                        </div>
-                    </div>
-                </div>
+        <a class="services_button1 nounderline" href="under.html" style="font-family:poppins;margin-top: 
+              33px">Know more</a> 
+            </div>
+           </div>
+    </div>
 
-                <div class="services">
-                    <div class="card services_card1 shadow p-2 mb-3" style="height: 480px;margin-top: 120px;margin-left:60px;">
-                        <center><img src="solo.PNG" class="img-fluid" alt="Responsive image" style="border-radius: 20%; margin-top:30px;width: 260px;height: 105px;">
-                            <div class="card-services_body" style="width:100%">
-                                <h4 class="card-title" style="text-align:center;color: #1c2f6f; font-size:24px; font-family: poppins; margin-top:10px;"><strong>SOLOPRENEUR
+     <div class="services">
+        <div class="card services_card1 shadow p-2 mb-3" style="height: 480px;margin-top: 120px;margin-left:60px;">
+              <center><img src="solo.PNG"class="img-fluid" alt="Responsive image"style="border-radius: 20%; margin-top:30px;width: 260px;height: 105px;">              <div class="card-services_body"style="width:100%">
+                 <h4 class="card-title" style="text-align:center;color: #1c2f6f; font-size:24px; font-family: poppins; margin-top:10px;" ><strong>SOLOPRENEUR
 </strong></h4>
-                                <pre class="card-text" style="overflow:hidden;background-color:rgba(243,247,255,255);border-color: rgba(243,247,255,255);font-size:15.4px;margin-top:20px;margin-bottom:8%;font-family:poppins;color: #002e63;">
+                  <pre class="card-text" style="overflow:hidden;background-color:rgba(243,247,255,255);border-color: rgba(243,247,255,255);font-size:15.4px;margin-top:20px;margin-bottom:8%;font-family:poppins;color: #002e63;">
 No investment business opportunity for
 the young professionals who are 
 interested in starting their entrepreneurial 
 journey in HR recruitment and earning 
 upto Rs 1 Lakh per month.
         </pre>
-                                <a class="services_button1 nounderline" href="under.html" style="font-family:poppins;margin-top: 
+              <a class="services_button1 nounderline" href="under.html" style="font-family:poppins;margin-top: 
               30px">Know more</a>
-                            </div>
-                    </div>
-                </div>
-                </center>
+            </div>
+          </div> 
         </div>
-
+    </center>
+      </div>
+        
         <!--our services end-->
 
         <!--Testimonials-->
