--- a/index.html
+++ b/index.html
@@ -1022,7 +1022,7 @@
                                             </div>
 
                                         </div>
-                                        <p style="color: #1c2f6f;font-family: poppins;font-size: 18px;margin-top: 40px;">Our focus is towards building your future.</p>
+                                        <p style="color: #1c2f6f;font-family: poppins;font-weight: bold; font-size: 20px;margin-left: 5px;margin-right: 5 px; margin-top: 40px;text-align: ;">Our focus is towards building your future.</p>
                                     </div>
                                 </div>
                             </div>
@@ -1039,7 +1039,7 @@
                                             </div>
 
                                         </div>
-                                        <p style="color: #1c2f6f;font-family: poppins;font-size: 18px;margin-top: 40px;">A 360 degree solution for all your Educational, Career and Corporate needs.</p>
+                                        <p style="color: #1c2f6f;font-family: poppins;font-weight: bold;text-align: ; font-size: 18px;margin-top: 40px;">A 360 degree solution for all your Educational, Career and Corporate needs.</p>
                                     </div>
                                 </div>
                             </div>
@@ -1057,7 +1057,7 @@
                                             </div>
 
                                         </div>
-                                        <p style="color: #1c2f6f;font-family: poppins;font-size: 18px;margin-top: 40px;">We are here to Upskill your<br> future. </p>
+                                        <p style="color: #1c2f6f;font-family: poppins;font-size: 18px;margin-top: 40px;font-weight: bold;">We are here to Upskill your<br> future. </p>
                                     </div>
                                 </div>
                             </div>
