ui by hbargva #talentserveapp

--- a/index.html
+++ b/index.html
@@ -1460,10 +1460,10 @@ upto Rs 1 Lakh per month.
             <div class="container">
                 <div class="d-flex flex-row ">
                     <div class="col-sm col-xs col-md col-lg-5 order-xs-2">
-                        <p class="p3" style="color:orange;width: 350px; font-weight: bold; margin-top:200px;padding-left:3.125rem;font-style: poppins;"> Coming Soon on Google Play and App Store</p>
+                        <p class="p3" style="color:orange;width: 350px; font-weight: bold; margin-top:200px;padding-left:3.125rem;font-style: poppins;"> Coming Soon on Google Play and <br>App Store</p>
                         <br><br><br>
                     </div>
-                    <div class="col-sm col-xs col-md col-lg-5 order-xs-1" style="margin-top: 50px;margin-left: -50px;"> <img src="talentserveapp_images/mobile.png" width="680px" height="350px" alt=""> </div>
+                    <div class="col-sm col-xs col-md col-lg-5 order-xs-1" style="margin-top: 45px;margin-left: -100px;"> <img src="talentserveapp_images/mobile.png" width="700px" height="390px" alt=""> </div>
                 </div>
             </div>
         </div>
