--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
         margin-left: 1rem;
         margin-bottom: 3rem;
         border-radius: 7%;
+        border: none;
     }
     
     .manymore-space {
