--- a/index.html
+++ b/index.html
@@ -1262,7 +1262,7 @@
         <div class="row manymore-space"> </div>
 
         <div style="text-align: right; padding-right:10%;">
-            <a href="collegepartners_page.html" id="manymore" style=" text-decoration: none;color:rgb(35,51,110); font-weight:900">and many more - </a>
+            <a href="collegepartners_page.html" target="_blank" id="manymore" style="color:rgb(35,51,110);font-family: poppins; font-weight:bolder">and many more - </a>
         </div>
 
         <div class="row" style="margin-top:4rem;"> </div>
