--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
     
     .line h3 span {
         color: #1d2f6f;
-        font-family: Poppins;
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
         background-color: rgba(240, 248, 255, 1);
         margin-left: 6.25rem;
         /* padding: 0 0.625rem; */
@@ -1413,12 +1413,12 @@ upto Rs 1 Lakh per month.
                 </div>
                 </center>
         </div>
-
+        <br><br><br><br>
         <!--our services end-->
 
         <!--Testimonials-->
 
-        <div class="container-inline" style="padding:0;margin: 3rem;">
+        <div class="container-inline" style="padding:0;">
             <div class="d-flex align-items-center ">
                 <div class="col-1 hr_fix" style="padding-left: 0;padding-right: 0;">
                     <div>
